--- a/tedx/package.json
+++ b/tedx/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "^9.112.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
