--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@react-three/drei": "^9.112.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2"
   }
 }
