--- a/tedx/package.json
+++ b/tedx/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.5",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.2",
     "three": "^0.168.0"
