--- a/tedx/package.json
+++ b/tedx/package.json
@@ -13,9 +13,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "^9.113.0",
     "@react-three/fiber": "^8.17.8",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.6.0",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.446.0",
     "maath": "^0.10.8",
     "next": "14.2.11",
     "react": "^18",
@@ -24,6 +26,7 @@
     "sharp": "^0.33.5",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0"
   },
   "devDependencies": {
