--- a/tedx/package.json
+++ b/tedx/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
     "sharp": "^0.33.5",
     "simplex-noise": "^4.0.3",
