--- a/tedx/package.json
+++ b/tedx/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "^9.113.0",
     "@react-three/fiber": "^8.17.8",
+    "@vfx-js/core": "^0.5.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.6.0",
