--- a/tedx/package.json
+++ b/tedx/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.446.0",
     "maath": "^0.10.8",
     "next": "14.2.11",
+    "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
