--- a/tedx/tsconfig.json
+++ b/tedx/tsconfig.json
@@ -21,6 +21,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/utils.jsx", "src/app/components/gallery.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/components/utils.jsx",
+    "src/app/components/gallery.jsx"
+  ],
   "exclude": ["node_modules"]
 }
