--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.6.0",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.13",
     "lucide-react": "^0.446.0",
     "maath": "^0.10.8",
     "next": "14.2.11",
